--- a/Readme.adoc
+++ b/Readme.adoc
@@ -20,14 +20,20 @@ Intelligent IoT Gateway is a key component of enterprise Internet of Things (IoT
 The first part of this lab is to install required software (Maven, JDK). Once the Gateway is provisioned, we'll put it into action by starting JBOSS Fuse, building & deploying the pre-built routing and business rules services. We'll then start sensor app that sends temperature data using MQTT to the JBOSS A-MQ broker. These messages will be forwarded to the services that we started earlier. Finally, we'll be creating the business rules to trigger desired action when the sensor value reaches a threshold. 
 
 === Requirements
-
+- Install Red Hat Enterprise Linux 7.3 Developer Preview for Arm
+- Download JBOSS Fuse 6.2.1 from the https://access.redhat.com/jbossnetwork/restricted/listSoftware.html?product=jboss.fuse&downloadType=distributions[Red Hat Customer Portal] and save it in the Downloads folder
 
 === Step 1 - Prepare the system
 
 Enable the required repos, install maven, install fuse and clone the project:
 
  * Open a terminal and enter the following commands:
-
+ 
+ [demo-user@localhost ~]$ subscription-manager repos --enable=rhel-7-for-arm-optional-rpms
+ [demo-user@localhost ~]$ sudo yum install maven
+ [demo-user@localhost ~]$ unzip Downloads/jboss-fuse-full-6.2.1.redhat-084.zip
+ [demo-user@localhost ~]$ ln -s jboss-fuse-6.2.1.redhat-084 fuse
+ [demo-user@localhost ~]$ git clone -b Arm-64-Platform https://github.com/ishuverma/Virtual_IoT_Gateway
  
 === Step 2 - Start JBoss Fuse Server
 
@@ -105,7 +111,8 @@ We will try this service by sending a test message via the *Software Sensor* to 
 
 *Business Rules Service* will take the transformed message from the queue and will put it in another AMQP message queue, but only if it meets the business rule condition
  
-
+ 
+ * Enter the following commands in a new terminal
 
  [demo-user@localhost Desktop]$ cd
  [demo-user@localhost ~]$ cd IoT_Summit_Lab/
@@ -131,23 +138,5 @@ Another way to verify that the message was properly processed is to take a
 _Note: Fuse console login/password is admin/change12_me_
 
 image:images/testResult.png[]
-
-Now we can use the `Software Sensor` to create a stream
-of sensordata and will observe the effect our Business Rules from has
-on the data.
-
-nter the following commands in a new terminal
-
- [demo-user@iotlab Desktop]$ cd
- [demo-user@iotlab ~]$ cd IoT_Summit_Lab/
- [demo-user@iotlab IoT_Summit_Lab]$ ./runSensor.sh
-
-The decision table can be updated with new rules to filter data i.e. what messages should be sent to the message.to.datacenter queue.
-
- ** Before the new rules can be applied, the running instance of `Business Rules Service` need to be stopped ( `CTRL-C` in the terminal session running Business Rules Service)
-
- ** Re-build & start the updated `Business Rules Service` and re-run the sensor
- 
-*The Intelligent IoT Gateway is now ready to work*
 
 *--------------------- End of Lab ---------------------*
